Translate "Privacy Policy" to "Rekisteriseloste".

--- a/parts/user-registration/puavo-user-registration.glade
+++ b/parts/user-registration/puavo-user-registration.glade
@@ -62,7 +62,7 @@
             </child>
             <child>
               <object class="GtkButton" id="privacy_policy">
-                <property name="label" translatable="yes">Privacy policy...</property>
+                <property name="label" translatable="yes">Privacy Policy</property>
                 <property name="name">0</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
