--- a/parts/user-registration/puavo-user-registration.glade
+++ b/parts/user-registration/puavo-user-registration.glade
@@ -18,23 +18,33 @@
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkFrame" id="upper_frame">
+          <object class="GtkBox" id="titlebar_container">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="halign">end</property>
-            <property name="valign">start</property>
-            <property name="label_xalign">0</property>
-            <property name="label_yalign">0</property>
-            <property name="shadow_type">none</property>
+            <property name="no_show_all">True</property>
+            <property name="orientation">vertical</property>
             <child>
-              <placeholder/>
+              <object class="GtkLabel" id="titlebar_text">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="no_show_all">True</property>
+                <property name="label" translatable="yes">title</property>
+                <style>
+                  <class name="titlebar_text"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <style>
-              <class name="upper_frame"/>
+              <class name="titlebar_container"/>
             </style>
           </object>
           <packing>
-            <property name="expand">True</property>
+            <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
@@ -101,6 +111,28 @@
             <property name="position">1</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkFrame" id="upper_frame">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="halign">end</property>
+            <property name="valign">start</property>
+            <property name="label_xalign">0</property>
+            <property name="label_yalign">0</property>
+            <property name="shadow_type">none</property>
+            <child>
+              <placeholder/>
+            </child>
+            <style>
+              <class name="upper_frame"/>
+            </style>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
         <style>
           <class name="main_container"/>
         </style>
@@ -125,7 +157,6 @@
         <property name="margin_top">10</property>
         <property name="row_spacing">5</property>
         <property name="column_spacing">10</property>
-        <property name="row_homogeneous">True</property>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
@@ -527,7 +558,7 @@
   </object>
   <object class="GtkBox" id="wifi_connector_box">
     <property name="width_request">1000</property>
-    <property name="height_request">600</property>
+    <property name="height_request">500</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="hexpand">True</property>
