--- a/parts/user-registration/puavo-user-registration.css
+++ b/parts/user-registration/puavo-user-registration.css
@@ -90,6 +90,11 @@ label.email_hint, label.phone_number_hint {
     color: #000;
 }
 
+.upper_frame entry:disabled {
+    background: #fff;
+    color: #888;
+}
+
 .main_window button {
     background: #005b9e;
     border: 2px solid #0067b3;
@@ -129,7 +134,18 @@ label.email_hint, label.phone_number_hint {
     color: #888;
 }
 
-combobox {
+.main_window combobox button, .main_window combobox button:hover {
+    border: 2px solid #888;
+    background: #fff;
+    color: #000;
+    padding: 5px;
+}
+
+.main_window combobox button:disabled {
+    border: 2px solid #888;
+    background: #fff;
+    color: #888;
+    padding: 5px;
 }
 
 .scrolled_window {
