--- a/rules/themes/files/Arc/gnome-shell/gnome-shell.css
+++ b/rules/themes/files/Arc/gnome-shell/gnome-shell.css
@@ -458,7 +458,7 @@ StScrollBar {
 
 .popup-menu {
   min-width: 15em;
-  color: #5c616c;
+  color: black;
   border-image: url("light-assets/menu/menu.svg") 9 9 9 9; }
   .popup-menu .popup-sub-menu {
     background: rgba(0, 0, 0, 0.05);
@@ -662,8 +662,10 @@ StScrollBar {
   #panel.dynamic-top-bar-white-btn {
     border-image: none; }
   #panel.unlock-screen, #panel.login-screen, #panel.lock-screen {
-    background-color: transparent;
-    border-image: none; }
+    background-color: rgba(0,0,0,0.65);
+    border-image: none;
+    height: 2em;
+    font-size: 1.3em ; }
   #panel:overview {
     border-image: none; }
   #panel #panelLeft, #panel #panelCenter {
@@ -1801,7 +1803,7 @@ StScrollBar {
     padding: 3px 18px; }
     .login-dialog .modal-dialog-button:default {
       text-shadow: 0 1px rgba(255, 255, 255, 0);
-      color: #5c616c;
+      color: black;
       background-color: #fbfbfc;
       border: 1px solid #cfd6e6;
       box-shadow: inset 0 1px rgba(251, 251, 252, 0.05); }
@@ -1820,8 +1822,8 @@ StScrollBar {
       .login-dialog .modal-dialog-button:default:insensitive {
         text-shadow: 0 1px rgba(255, 255, 255, 0);
         color: rgba(92, 97, 108, 0.55);
-        border: 1px solid rgba(207, 214, 230, 0.55);
-        background-color: rgba(251, 251, 252, 0.55);
+        border: 1px solid rgba(207, 214, 230, 0.2);
+        background-color: rgba(251, 251, 252, 0.2);
         box-shadow: inset 0 1px rgba(251, 251, 252, 0.05); }
 
 .login-dialog-logo-bin {
@@ -1900,14 +1902,24 @@ StScrollBar {
   padding-right: 18px; }
 
 .login-dialog-prompt-layout {
-  padding-top: 24px;
-  padding-bottom: 12px;
+  padding-top: 4px;
+  padding-bottom: 30px;
   spacing: 8px;
-  width: 23em; }
+  width: 23em;
+  padding-left:3em;
+  padding-right:3em;
+  background-color: rgba(0,0,0,0.65);
+  border-radius: 5px;}
+
+.login-dialog-prompt-entry:insensitive {
+    color: #000 !important;
+    background: rgba(136, 136, 136, 0.5) !important;
+}
 
 .login-dialog-prompt-label {
-  color: #7e8fa5;
-  font-size: 11pt;
+  color: white;
+  text-shadow: 1px 1px 0 #7A7A7A;
+  font-size: 13pt;
   padding-top: 1em; }
 
 .login-dialog-session-list-button StIcon {
@@ -1977,8 +1989,10 @@ StScrollBar {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4); }
 
 #lockDialogGroup {
-  background: #2e3436 url(misc/noise-texture.png);
-  background-repeat: repeat; }
+  background: #2e3436 url(/etc/gdm3/background.img);
+  background-repeat: repeat;
+  background-size: cover;
+  border:solid transparent 1px;}
 
 #screenShieldNotifications StButton#vhandle, #screenShieldNotifications StButton#hhandle {
   background-color: rgba(245, 246, 247, 0.3); }
