Use /etc/krb5.keytab as the path for slapd kerberos keytab.
This is how we have it in production.

--- a/cloud/puavo-ds/master/lib/puavo-ds/templates/default_slapd.erb
+++ b/cloud/puavo-ds/master/lib/puavo-ds/templates/default_slapd.erb
@@ -41,7 +41,7 @@ SLAPD_SENTINEL_FILE=/etc/ldap/noslapd
 # For Kerberos authentication (via SASL), slapd by default uses the system
 # keytab file (/etc/krb5.keytab).  To use a different keytab file,
 # uncomment this line and change the path.
-export KRB5_KTNAME=/etc/ldap/krb5.keytab
+#export KRB5_KTNAME=/etc/krb5.keytab
 
 # Additional options to pass to slapd
 SLAPD_OPTIONS=""
