I do not know how "&lt;" and "&gt;" can go through translations (in glade/python/gettext), thus I am simple removing them.

--- a/parts/user-registration/data/network.glade
+++ b/parts/user-registration/data/network.glade
@@ -172,7 +172,7 @@
         </child>
         <child>
           <object class="GtkButton" id="network_go_to_account_page_button">
-            <property name="label" translatable="yes">Next &gt;</property>
+            <property name="label" translatable="yes">Next</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
