--- a/parts/user-registration/data/account.glade
+++ b/parts/user-registration/data/account.glade
@@ -363,7 +363,7 @@
         <property name="can_focus">False</property>
         <child>
           <object class="GtkButton" id="account_previous_page">
-            <property name="label" translatable="yes">&lt; Previous</property>
+            <property name="label" translatable="yes">Previous</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
