--- a/parts/user-registration/data/welcome.glade
+++ b/parts/user-registration/data/welcome.glade
@@ -54,7 +54,7 @@
     </child>
     <child>
       <object class="GtkButton" id="welcome_next">
-        <property name="label" translatable="yes">Next &gt;</property>
+        <property name="label" translatable="yes">Next</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
