--- a/rules/gnome_shell_extensions/files/dash-to-panel@jderose9.github.com/stylesheet.css
+++ b/rules/gnome_shell_extensions/files/dash-to-panel@jderose9.github.com/stylesheet.css
@@ -21,23 +21,20 @@
  * Some code was also adapted from the upstream Gnome Shell source code.
  */
 
- #dashtopanelScrollview .app-well-app .overview-icon,
- #dashtopanelTaskbar .show-apps .overview-icon {
+#dashtopanelTaskbar .dash-item-container > StWidget {
+	margin: 0;
+	padding: 0; 
+}
+
+#dashtopanelScrollview .app-well-app .overview-icon,
+#dashtopanelTaskbar .show-apps .overview-icon {
 	border: none;
 	margin: 0;
 	padding: 0;
 }
 
-#dashtopanelScrollview .dtp-icon-container {
-	padding: 0 4px;
-}
-
 #dashtopanelScrollview .app-well-app .overview-label {
 	padding-right: 8px;
-}
-
-#dashtopanelThumbnailScrollview {
-	-st-hfade-offset: 48px;
 }
 
 #dashtopanelScrollview .app-well-app:hover .overview-icon,
@@ -63,12 +60,27 @@
 }
 
 #dashtopanelTaskbar .scrollview-fade {
-	background-gradient-direction: horizontal;
     background-gradient-end: rgba(0, 0, 0, 0);
 }
 
 .dashtopanelSecondaryMenu {
 	max-width: 400px;
+}
+
+.dashtopanelMainPanel.vertical .panel-button {
+	text-align: center; 
+}
+
+.dashtopanelMainPanel.vertical .panel-button.vertical *,
+.dashtopanelMainPanel.vertical .panel-button.clock-display * {
+	padding: 0;
+	margin: 0; 
+}
+
+.dashtopanelMainPanel.vertical .panel-button > *,
+.dashtopanelMainPanel.vertical .panel-button.vertical > *,
+.dashtopanelMainPanel.vertical .panel-button.clock-display > * {
+	padding: 8px 0; 
 }
 
 #dashtopanelThumbnailList {
@@ -100,11 +112,7 @@
 }
 
 .showdesktop-button {
-	width: 4px;
-	border: 1px solid rgba(200, 200, 200, .2);
-	border-top-width: 0;
-	border-right-width: 0;
-	border-bottom-width: 0;
+	border: 0 solid rgba(200, 200, 200, .2);
 }
 
 .showdesktop-button-hovered {
@@ -114,9 +122,23 @@
 .panel-corner:active, .panel-corner:overview, .panel-corner:focus {
     -panel-corner-border-color: rgba(0, 0, 0, .001);
 }
+#dashtopanelScrollview .badge {
+	color: rgba(255, 255, 255, 1);
+	font-weight: bold;
+	text-align: center;
+}
 
-.number-overlay {
-        background-color: rgba(0,0,0,0.8);
-        color: rgba(256, 256, 256, 1);
-        text-align: center;
+#dashtopanelScrollview .number-overlay {
+	background-color: rgba(0,0,0,0.8);
+}
+
+#dashtopanelScrollview .notification-badge {
+    background-color: rgba(255,0,0,0.8);
+}
+
+#dashtopanelScrollview .progress-bar {
+    /* Customization of the progress bar style, e.g.:
+      -progress-bar-background: rgba(0.8, 0.8, 0.8, 1);
+      -progress-bar-border: rgba(0.9, 0.9, 0.9, 1);
+    */
 }
