Support 1024x768 resolution in user registration

--- a/parts/user-registration/data/main_window.css
+++ b/parts/user-registration/data/main_window.css
@@ -152,7 +152,7 @@ THE NETWORK CONNECTIONS PAGE
 */
 
 .network_container {
-    padding: 50px 150px;
+    padding: 50px $(network_container_left);
 }
 
 .network_container .scrolled_window {
