--- a/parts/user-registration/data/login.glade
+++ b/parts/user-registration/data/login.glade
@@ -63,7 +63,6 @@
             <property name="max_length">32</property>
             <property name="visibility">False</property>
             <property name="input_purpose">password</property>
-            <signal name="changed" handler="on_password_changed" swapped="no"/>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -78,33 +77,18 @@
       </packing>
     </child>
     <child>
-      <object class="GtkBox">
+      <object class="GtkButton" id="do_login">
+        <property name="label" translatable="yes">Login</property>
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <child>
-          <object class="GtkButton" id="submit">
-            <property name="label" translatable="yes">Login</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <signal name="clicked" handler="on_submit_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="pack_type">end</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <style>
-          <class name="login_button_box"/>
-        </style>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+        <signal name="clicked" handler="on_login_clicked" swapped="no"/>
       </object>
       <packing>
         <property name="expand">False</property>
         <property name="fill">False</property>
+        <property name="pack_type">end</property>
         <property name="padding">10</property>
-        <property name="position">1</property>
       </packing>
     </child>
     <style>
