--- a/parts/user-registration/data/login.glade
+++ b/parts/user-registration/data/login.glade
@@ -50,6 +50,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="max_length">32</property>
+            <signal name="activate" handler="on_username_activated"/>
+            <signal name="changed" handler="on_username_changed"/>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -63,6 +65,8 @@
             <property name="max_length">32</property>
             <property name="visibility">False</property>
             <property name="input_purpose">password</property>
+            <signal name="activate" handler="on_password_activated"/>
+            <signal name="changed" handler="on_password_changed"/>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -82,6 +86,7 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
+        <property name="sensitive">False</property>
         <signal name="clicked" handler="on_login_clicked" swapped="no"/>
       </object>
       <packing>
