puavomenu: make disabled buttons actually look like disabled

--- a/parts/puavomenu/res/puavomenu.css
+++ b/parts/puavomenu/res/puavomenu.css
@@ -113,6 +113,10 @@ entry {
     color: @theme_selected_fg_color;
 }
 
+.pm_button:disabled {
+    color: @insensitive_fg_color;
+}
+
 /* Program buttons */
 .button_program { }
 
