Change the "enter Abitti version"-entry in puavo-laptop-setup to a combobox, where the version can be chosen from a dropdown list.
No error handling yet in case we can not determine the available
Abitti-versions.

--- a/parts/laptop-setup/puavo-laptop-setup.glade
+++ b/parts/laptop-setup/puavo-laptop-setup.glade
@@ -103,10 +103,9 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="abitti_version">
+              <object class="GtkComboBoxText" id="abitti_version">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="input_purpose">number</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
