--- a/cloud/puavo-ds/slave/init_ldap_slave.ldif.erb
+++ b/cloud/puavo-ds/slave/init_ldap_slave.ldif.erb
@@ -73,7 +73,7 @@ olcLastMod: TRUE
 olcDbCheckpoint: 512 30
 olcDbCacheSize: 30000
 olcDbDNCacheSize: 60000
-olcSyncRepl: rid=001 provider="ldap://<%= @master_server %>" binddn="<%= @binddn %>" bindmethod=simple credentials="<%= @bindpw %>" searchbase="<%= @suffix %>" type=refreshAndPersist interval=00:00:00:05 retry="15 +" timeout=30 starttls=critical tls_cacert=/etc/puavo-conf/rootca.pem tls_reqcert=never schemachecking=off scope=sub
+olcSyncRepl: rid=001 provider="ldap://<%= @master_server %>" binddn="<%= @binddn %>" bindmethod=simple credentials="<%= @bindpw %>" searchbase="<%= @suffix %>" type=refreshAndPersist interval=00:00:00:05 retry="15 +" timeout=30 starttls=critical tls_cacert=/etc/puavo-conf/rootca.pem schemachecking=off scope=sub
 olcUpdateRef: ldap://<%= @master_server %>
 olcDbConfig: {0}set_cachesize 0 10485760 0
 olcDbConfig: {1}set_lg_bsize 2097512
