Fix css in puavo-user-registration for recent "WPA 802.1X"-changes.

--- a/parts/user-registration/data/main_window.css
+++ b/parts/user-registration/data/main_window.css
@@ -218,11 +218,25 @@ THE NETWORK CONNECTIONS PAGE
     padding-bottom: 25px;
 }
 
-.network_container .password_container .network_username_label .network_password_label {
+.network_container .password_container .network_username_label {
     padding-right: 10px;
+    margin-bottom: 10px;
 }
 
-.network_container .password_container .network_username_entry .network_password_entry {
+.network_container .password_container .network_username_entry {
+    padding: 2px 5px;
+    margin-bottom: 10px;
+    border: 2px solid #888;
+    outline: none;
+    font-weight: bold;
+    font-size: $(entry_font_size);
+}
+
+.network_container .password_container .network_username_entry:disabled {
+    background: #666;
+}
+
+.network_container .password_container .network_password_entry {
     padding: 2px 5px;
     border: 2px solid #888;
     outline: none;
@@ -230,7 +244,7 @@ THE NETWORK CONNECTIONS PAGE
     font-size: $(entry_font_size);
 }
 
-.network_container .password_container .network_username_entry:disabled .network_password_entry:disabled {
+.network_container .password_container .network_password_entry:disabled {
     background: #666;
 }
 
